src/objects/Project_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Billable_Hours_External_Snap__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Hours (External) Snap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billable_Hours_Internal_Snap__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Hours (Internal) Snap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billed_Expenses_Snap__c</fullName>
        <label>Billed Expenses Snap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billed_Labor_Snap__c</fullName>
        <label>Billed Labor Snap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billed_Snap__c</fullName>
        <label>Billed Snap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billings_Snap__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billings Snap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bookings_Snap__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Bookings Snap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credited_Hours_Snap__c</fullName>
        <label>Credited Hours Snap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivered_Hours_Snap__c</fullName>
        <label>Delivered Hours Snap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date_Snap__c</fullName>
        <label>End Date Snap</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense_Costs_Snap__c</fullName>
        <label>Expense Costs Snap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Costs_Snap__c</fullName>
        <label>External Costs Snap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Internal_Costs_Snap__c</fullName>
        <label>Internal Costs Snap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoiced_Labor_Snap__c</fullName>
        <label>Invoiced Labor Snap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoiced_Labor__c</fullName>
        <label>Invoiced Labor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoiced_Snap__c</fullName>
        <label>Invoiced Snap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_Snap__c</fullName>
        <formula>Billings_Snap__c +  Pass_Through_Billings_Snap__c -  Internal_Costs_Snap__c - External_Costs_Snap__c -  Expense_Costs_Snap__c -  Other_Costs_Snap__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin Snap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Milestone_Snap__c</fullName>
        <label>Next Milestone Snap</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Non_Billable_Hours_External_Snap__c</fullName>
        <label>Non-Billable Hours (External) Snap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Billable_Hours_Internal_Snap__c</fullName>
        <label>Non-Billable Hours (Internal) Snap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes_Snap__c</fullName>
        <label>Notes Snap</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Costs_Snap__c</fullName>
        <label>Other Costs Snap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pass_Through_Billings_Snap__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Pass-Through Billings Snap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_Hours_Snap__c</fullName>
        <inlineHelpText>The number of hours planned for this project</inlineHelpText>
        <label>Planned Hours Snap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Status_Notes__c</fullName>
        <label>Project Status Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Status_Snap__c</fullName>
        <label>Project Status Snap</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remaining_Bookings_Snap__c</fullName>
        <formula>Bookings_Snap__c - Billings_Snap__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Bookings Snap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stage_Snap__c</fullName>
        <label>Stage Snap</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Finance Review</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date_Snap__c</fullName>
        <label>Start Date Snap</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Assigned_Hours_Snap__c</fullName>
        <label>Total Assigned Hours Snap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Billable_Hours_Reaming_Snap__c</fullName>
        <formula>Planned_Hours_Snap__c - Total_Billable_Hours_Snap__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Billable Hours Reaming Snap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Billable_Hours_Snap__c</fullName>
        <formula>Billable_Hours_External_Snap__c + Billable_Hours_Internal_Snap__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Billable Hours Snap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Costs_Snap__c</fullName>
        <formula>Internal_Costs_Snap__c +  External_Costs_Snap__c +  Expense_Costs_Snap__c +  Other_Costs_Snap__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Costs Snap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Projected_Revenue_From_Assignments__c</fullName>
        <label>Total Projected Revenue From Assignments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unscheduled_Backlog_Snap__c</fullName>
        <label>Unscheduled Backlog Snap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Project Snapshot</label>
    <nameField>
        <label>Project Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>